Image top and bottom margins set to 0

--- a/css/StatblockWizard.css
+++ b/css/StatblockWizard.css
@@ -306,7 +306,7 @@ dd.StatblockWizard-spelllist {
     border: none;
     padding: 0;
     max-width: 60mm;
-    margin: 2px auto;
+    margin: 0 auto;
 }
 
 .StatblockWizard hr {
