--- a/css/StatblockWizardCreator.css
+++ b/css/StatblockWizardCreator.css
@@ -21,6 +21,10 @@ select {
     padding: 1px 2px;
 }
 
+input[type="number"] {
+    width: 3em;
+}
+
 .aligned {
     position: absolute;
     left: 200px;
