--- a/css/StatblockWizard.css
+++ b/css/StatblockWizard.css
@@ -204,7 +204,7 @@
     break-inside: avoid-column;
 }
 
-.StatblockWizard-sectionheader + .StatblockWizard-line {
+.StatblockWizard-sectionheader+.StatblockWizard-line {
     break-before: avoid;
 }
 
@@ -213,13 +213,13 @@
     margin-bottom: 2px;
 }
 
-.StatblockWizard-line + .StatblockWizard-text {
+.StatblockWizard-line+.StatblockWizard-text {
     text-indent: 1em;
     margin-top: 2px;
     margin-bottom: 2px;
 }
 
-.StatblockWizard-sectionheader + .StatblockWizard-line {
+.StatblockWizard-sectionheader+.StatblockWizard-line {
     margin-top: 2px;
 }
 
@@ -278,7 +278,7 @@ dl.StatblockWizard-list {
     margin-bottom: 2px;
 }
 
-.StatblockWizard-line + dl.StatblockWizard-list {
+.StatblockWizard-line+dl.StatblockWizard-list {
     margin-top: 2px;
 }
 
@@ -307,6 +307,14 @@ dd.StatblockWizard-spelllist {
     padding: 0;
     max-width: 60mm;
     margin: 0 auto;
+}
+
+.StatblockWizard-image-left {
+    margin: 0 auto 0 0;
+}
+
+.StatblockWizard-image-right {
+    margin: 0 0 0 auto;
 }
 
 .StatblockWizard hr {
