Allow free use of StatblockWizard.css style sheet

--- a/css/StatblockWizard.css
+++ b/css/StatblockWizard.css
@@ -1,4 +1,5 @@
-/* Copyright 2023 StatblockWizard */
+/* This file is provided as-is, without any warranty. You are free to copy, modify, and redistribute as you see fit. */
+
 :root {
     --StatblockWizardmonstername: #a00000;
     --StatblockWizardscreenborder: #a00000;
