Support the 2024 layout

--- a/2014/css/StatblockWizard.css
+++ b/2014/css/StatblockWizard.css
@@ -283,6 +283,10 @@ dd.StatblockWizard-spelllist {
     margin-left: 1em;
 }
 
+li.StatblockWizard-listitem::marker {
+    content: counter(list-item) ": ";
+}
+
 .StatblockWizard-supplemental {
     width: 100%;
 }
