--- a/css/StatblockWizardMain.css
+++ b/css/StatblockWizardMain.css
@@ -1,4 +1,4 @@
-/* Copyright 2023 StatblockWizard */
+/* Copyright 2023, 2025 StatblockWizard */
 :root {
     --fore: #020202;
     --back: #fdfdfd;
