--- a/2014/css/StatblockWizardFonts.css
+++ b/2014/css/StatblockWizardFonts.css
@@ -1,4 +1,4 @@
-/* Copyright 2023 StatblockWizard */
+/* Copyright 2023, 2025 StatblockWizard */
 /* latin-ext */
 @font-face {
     font-family: 'Source Sans Pro';
