--- a/2014/css/StatblockWizardPrint.css
+++ b/2014/css/StatblockWizardPrint.css
@@ -1,4 +1,4 @@
-/* Copyright 2023 StatblockWizard */
+/* Copyright 2023, 2025 StatblockWizard */
 @media print {
     :root {
         --StatblockWizardprintborder: #d3d3d3;
