--- a/2014/css/StatblockWizardViewer.css
+++ b/2014/css/StatblockWizardViewer.css
@@ -1,4 +1,4 @@
-/* Copyright 2023 StatblockWizard */
+/* Copyright 2023, 2025 StatblockWizard */
 .downloadoptionstext {
     font-size: larger;
     font-weight: bold;
