--- a/css/StatblockWizardMain.css
+++ b/css/StatblockWizardMain.css
@@ -110,6 +110,11 @@ h2 {
     margin: 20px 0;
 }
 
+.samplewide {
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
 .sampleimage {
     border: none;
     margin: 0;
