Set a bit lighter drop shadow

--- a/2024/css/StatblockWizard.css
+++ b/2024/css/StatblockWizard.css
@@ -13,6 +13,7 @@
     --StatblockWizardModsRow2: #d8c0c0;
     --StatblockWizardSectionHeader: #500000;
     --StatblockWizardGrey: #696969;
+    --StatblockWizardBoxShadow: #d0d0d0;
 }
 
 .StatblockWizard {
@@ -32,7 +33,7 @@
     letter-spacing: 0.02em;
     border: 3px var(--StatblockWizardBorder) double;
     border-radius: 6px;
-    box-shadow: 2px 2px 4px var(--StatblockWizardBorder);
+    box-shadow: 2px 2px 4px var(--StatblockWizardBoxShadow);
 
     margin-top: 0;
     margin-bottom: 4px;
