Set style for strong and b keywords to font-weight: bold (instead of default bolder)

--- a/2024/css/StatblockWizard.css
+++ b/2024/css/StatblockWizard.css
@@ -70,7 +70,7 @@
 }
 
 .StatblockWizard-likeyword,
-.StatblockWizard-keyword {
+.StatblockWizard-keyword, .StatblockWizard strong, .StatblockWizard b {
     font-weight: bold;
     letter-spacing: 0.02em;
 }
