--- a/2014/css/StatblockWizard.css
+++ b/2014/css/StatblockWizard.css
@@ -48,7 +48,7 @@
     padding: 0 10px;
 }
 
-.StatblockWizard-keyword {
+.StatblockWizard-keyword, .StatblockWizard strong, .StatblockWizard b {
     font-weight: bold;
 }
 
