--- a/2024/css/StatblockWizard.css
+++ b/2024/css/StatblockWizard.css
@@ -17,6 +17,7 @@
 }
 
 .StatblockWizard {
+    position: relative;
     font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
     color: var(--StatblockWizardText);
     background-color: var(--StatblockWizardBackground);
@@ -70,7 +71,9 @@
 }
 
 .StatblockWizard-likeyword,
-.StatblockWizard-keyword, .StatblockWizard strong, .StatblockWizard b {
+.StatblockWizard-keyword,
+.StatblockWizard strong,
+.StatblockWizard b {
     font-weight: bold;
     letter-spacing: 0.02em;
 }
@@ -145,6 +148,7 @@
 .StatblockWizard-physicalabilities {
     background-color: var(--StatblockWizardAbilitiesRow1);
 }
+
 .StatblockWizard-physicalmods {
     background-color: var(--StatblockWizardModsRow1);
 }
@@ -152,6 +156,7 @@
 .StatblockWizard-mentalabilities {
     background-color: var(--StatblockWizardAbilitiesRow2);
 }
+
 .StatblockWizard-mentalmods {
     background-color: var(--StatblockWizardModsRow2);
 }
@@ -306,7 +311,7 @@
 .StatblockWizard-attack .StatblockWizard-keyword,
 .StatblockWizard-savingthrow .StatblockWizard-keyword,
 .StatblockWizard-reaction .StatblockWizard-keyword {
-        font-style: italic;
+    font-style: italic;
 }
 
 .StatblockWizard-legendarytext {
@@ -412,4 +417,18 @@ dd.StatblockWizard-spelllist {
     border-right: 0;
     border-left: 0;
     border-bottom: 1px var(--StatblockWizardScreenborder) solid;
+}
+
+.StatblockWizard-attribution1 {
+    margin: 0;
+    height: 2px;
+}
+
+.StatblockWizard-attribution2 {
+    color: var(--StatblockWizardGrey);
+    font-size: 0.52em;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    right: 7px;
 }
