--- a/2024/css/StatblockWizardViewer.css
+++ b/2024/css/StatblockWizardViewer.css
@@ -5,3 +5,8 @@
     margin-left: 15px;
     margin-right: 3px;
 }
+
+.StatblockWizardViewerContent {
+    overflow-y: hidden;
+    overflow-x: auto;
+}
